--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^14.2.0",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "moment": "^2.29.3"
   }
 }
