--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^12.5.3",
     "dotenv": "^14.2.0",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "moment": "^2.29.3"
+    "moment": "^2.29.3",
+    "mysql2": "^2.3.3"
   }
 }
