--- a/memedona-client/package.json
+++ b/memedona-client/package.json
@@ -14,11 +14,13 @@
     "react-page-visibility": "^7.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-sw": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildnserve": "react-scripts build && npx serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
