--- a/memedona-client/public/manifest.json
+++ b/memedona-client/public/manifest.json
@@ -14,7 +14,7 @@
       "sizes": "297x297"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "fullscreen",
   "orientation": "portrait",
   "theme_color": "#000000",
