--- a/memedona-client/package.json
+++ b/memedona-client/package.json
@@ -2,6 +2,7 @@
   "name": "memedona-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://memedona.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "video.js": "^7.19.2"
   }
 }
