--- a/memedona-client/package.json
+++ b/memedona-client/package.json
@@ -23,7 +23,9 @@
     "build": "react-scripts build",
     "buildnserve": "react-scripts build && npx serve -s build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
