--- a/memeCollector/package.json
+++ b/memeCollector/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "discord.js": "^12.5.3",
-    "dotenv": "^14.2.0"
+    "dotenv": "^14.3.2"
   }
 }
