--- a/memeCollector/package.json
+++ b/memeCollector/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "discord.js": "^12.5.3",
-    "dotenv": "^14.3.2"
+    "dotenv": "^14.3.2",
+    "express": "^4.18.2"
   }
 }
