--- a/memedona-client/public/manifest.json
+++ b/memedona-client/public/manifest.json
@@ -9,31 +9,25 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo.png",
+      "src": "/icons/logo.png",
       "type": "image/png",
       "sizes": "297x297",
       "purpose": "any"
     },
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-256x256.png",
-      "sizes": "256x256",
+      "src": "/icons/icon-284x284.png",
+      "sizes": "284x284",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
