--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "nodemon .",
+    "predeploy": "git add . && git commit -m \"Commit for deploy\"",
     "deploy": "git push heroku main"
   },
   "keywords": [],
