--- a/memedona-client/package.json
+++ b/memedona-client/package.json
@@ -23,8 +23,7 @@
     "buildnserve": "react-scripts build && npx serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "git push origin main"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
     "video.js": "^7.19.2"
   }
 }
